--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <div id="endMessage"></div>
       <button onclick="restartGame()">Restart Game</button>
     </div>
+    <p>Total Visitors: <span id="visitorCount">0</span></p> <!-- Add this line for the visitor counter -->
   </div>
   <script src="script.js"></script>
 </body>
